# weekend-raytracer

./: Cargo.toml  README.md
benches/: bench.rs
src/: camera.rs  color.rs  hittable.rs  hittables.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
src/hittables/: bvh.rs  constant_medium.rs  hittable_list.rs  mod.rs  quad.rs  rotate.rs  sphere.rs  translate.rs
src/math/: aabb.rs  interval.rs  matrix3.rs  mod.rs  point3.rs  range.rs  ray.rs  vec3.rs
src/texture/: perlin.rs
