[package]
name = "weekend-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.13"
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
